<resources>
    <string name="app_name">GretaApp</string>
    <string name="title">Formation\n\"Titre Professionnel Développeur Web \net Web Mobile\" </string>
    <string name="descr1">Logo GDLS</string>
    <string name="descr2">Logo Greta</string>
    <string name="descr3">La formation développeur web et web mobile vous apprendra les compétences essentielles pour créer des applications et des sites web réactifs en utilisant HTML, CSS, JavaScript, et des frameworks populaires tel que CodeIgniter. Vous maîtriserez le développement front-end et back-end ainsi que la conception responsive pour offrir des expériences utilisateur optimales sur différentes plateformes. Rejoignez-nous !
    </string>
    <string name="button">Valider</string>
    <string name="Bienvenue">Bienvenue sur le quiz !</string>
    <string name="go">Quizz</string>
    <string name="photos">Galerie</string>
    <string name="inscription">Inscription</string>
    <string name="inscrire">Renseignez vos informations et nous reviendrons vers vous :</string>
    <string name="mentions">Mentions Légales</string>
    <string name="editeur">Nom de l\'entreprise/organisation :\nMr Vincent Constantin\n\nAdresse :\nChâlons-en-Champagne\n\nTéléphone :\n0326210684\n\nEmail :\nvincent-c51@hotmail.fr</string>
    <string name="hebergeur">Nom de l\'entreprise/organisation :\nGreta Marne\n\nAdresse :\n20 rue des Augustins, 51100 Reims\n\nTéléphone :\n0326845540\n\nEmail :\ncontact@gretamarne.com\n\nSite Web :\nhttp://www.gretamarne.com</string>
    <string name="propriete">Tous les droits de propriété intellectuelle relatifs à cette application (y compris, mais sans s\'y limiter, les droits d\'auteur, les marques commerciales, les logos, les noms commerciaux et les contenus) appartiennent à Greta Marne ou à ses concédants de licence. Toute reproduction, distribution, modification ou utilisation non autorisée du contenu de cette application est strictement interdite.</string>
    <string name="donnees">Cette application peut collecter et utiliser des données personnelles des utilisateurs dans le cadre de son fonctionnement. Pour plus d\'informations sur la collecte, l\'utilisation et la protection des données personnelles, veuillez consulter notre politique de confidentialité disponible https://www.studea-gretacfa-marne.fr/pied-de-page/donnees-personnelles.</string>
    <string name="cookies">Cette application peut utiliser des cookies pour améliorer l\'expérience de l\'utilisateur. Les cookies sont de petits fichiers texte placés sur l\'appareil de l\'utilisateur pour collecter des informations sur son utilisation de l\'application. L\'utilisateur peut contrôler l\'utilisation des cookies via les paramètres de son appareil.</string>
    <string name="liens">Cette application peut contenir des liens vers des sites Web ou des services tiers. Nous déclinons toute responsabilité concernant les pratiques de confidentialité ou le contenu de ces sites tiers.</string>
    <string name="responsabilites">Nous nous efforçons de maintenir l\'exactitude et la fiabilité des informations fournies dans cette application, mais nous ne pouvons garantir leur exhaustivité et leur exactitude à tout moment. L\'utilisation de cette application se fait aux risques de l\'utilisateur. Nous ne serons pas responsables des dommages directs, indirects, spéciaux ou consécutifs découlant de l\'utilisation de cette application ou de l\'impossibilité d\'y accéder.</string>
    <string name="modif">Nous nous réservons le droit de modifier ces mentions légales à tout moment. Toute modification sera publiée dans cette application et prendra effet immédiatement.</string>
    <string name="contact">Pour toute question ou demande concernant les mentions légales de cette application, veuillez nous contacter à contact@gretamarne.com.</string>
    <string name="rules">Gagnez 5 points pour chaque bonne réponse !</string>
</resources>